--- a/src/apps/deskflow-gui/dialogs/ServerConfigDialog.ui
+++ b/src/apps/deskflow-gui/dialogs/ServerConfigDialog.ui
@@ -488,7 +488,7 @@
             <item>
              <widget class="QLabel" name="label_7">
               <property name="text">
-               <string>Limit:</string>
+               <string>Limit to:</string>
               </property>
              </widget>
             </item>
