refactor: mainwindow move save config to a button shown only in server mode

--- a/src/apps/deskflow-gui/MainWindow.ui
+++ b/src/apps/deskflow-gui/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>730</width>
-    <height>520</height>
+    <width>735</width>
+    <height>525</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -230,6 +230,25 @@
                </property>
                <property name="text">
                 <string>&amp;Configure Server</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="btnSaveServerConfig">
+               <property name="toolTip">
+                <string>Export server configuration</string>
+               </property>
+               <property name="text">
+                <string>...</string>
+               </property>
+               <property name="icon">
+                <iconset theme="QIcon::ThemeIcon::DocumentSaveAs"/>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>22</width>
+                 <height>22</height>
+                </size>
                </property>
               </widget>
              </item>
