feat: gui, Update user agent string and simplify version check request (RFC 9110 10.1.5)
feat: Add option to participate in popularity contest

- Only sets extra user agent info if the option is enabled
- Default is disabled
- Added checkbox to version checker dialog
- Added option to settings dialog

--- a/src/lib/gui/dialogs/SettingsDialog.ui
+++ b/src/lib/gui/dialogs/SettingsDialog.ui
@@ -112,6 +112,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="cbPopularityContest">
+            <property name="text">
+             <string>Participate in popularity contest (send extra user-agent data)</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QCheckBox" name="cbAutoHide">
             <property name="text">
              <string>Hide the window when the app starts</string>
