feat: Force lock to screen option

--- a/src/lib/gui/dialogs/ServerConfigDialog.ui
+++ b/src/lib/gui/dialogs/ServerConfigDialog.ui
@@ -435,6 +435,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="cbForceLockToScreen">
+            <property name="text">
+             <string>Force lock to computer</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QCheckBox" name="cbRelativeMouseMoves">
             <property name="enabled">
              <bool>true</bool>
