--- a/src/lib/gui/dialogs/SettingsDialog.ui
+++ b/src/lib/gui/dialogs/SettingsDialog.ui
@@ -232,7 +232,7 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset theme="QIcon::ThemeIcon::DocumentOpen"/>
+                <iconset theme="document-open"/>
                </property>
                <property name="flat">
                 <bool>true</bool>
@@ -293,7 +293,7 @@
                <string>Regenerate certificate</string>
               </property>
               <property name="icon">
-               <iconset theme="QIcon::ThemeIcon::ViewRefresh"/>
+               <iconset theme="view-refresh"/>
               </property>
              </widget>
             </item>
@@ -589,7 +589,7 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset theme="QIcon::ThemeIcon::DocumentOpen"/>
+                <iconset theme="document-open"/>
                </property>
                <property name="flat">
                 <bool>true</bool>
