--- a/src/lib/gui/dialogs/ScreenSettingsDialog.ui
+++ b/src/lib/gui/dialogs/ScreenSettingsDialog.ui
@@ -264,6 +264,58 @@
             </item>
            </widget>
           </item>
+          <item row="10" column="0">
+           <widget class="QLabel" name="label_altgr">
+            <property name="text">
+             <string>Alt&amp;Gr</string>
+            </property>
+            <property name="buddy">
+             <cstring>comboAltGr</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="1">
+           <widget class="QComboBox" name="comboAltGr">
+            <property name="currentIndex">
+             <number>5</number>
+            </property>
+            <item>
+             <property name="text">
+              <string>Shift</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Ctrl</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Alt</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Meta</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Super</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>AltGr</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>None</string>
+             </property>
+            </item>
+           </widget>
+          </item>
           <item row="6" column="1">
            <widget class="QComboBox" name="comboSuper">
             <property name="currentIndex">
