--- a/src/lib/gui/dialogs/SettingsDialog.ui
+++ b/src/lib/gui/dialogs/SettingsDialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-SPDX-FileCopyrightText: 2025 Deskflow Developers
+SPDX-FileCopyrightText: (C) 2025 Deskflow Developers
 SPDX-License-Identifier: GPL-2.0-only WITH LicenseRef-OpenSSL-Exception
 -->
 <ui version="4.0">
